--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://muadongyeuthuong3x/deloy",
+  "homepage": "https://muadongyeuthuong3x.github.io/deloy/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
